--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -6,9 +6,25 @@
             <div class="row">
                 <div class="col-lg-8  offset-lg-2">
                     <h3 class="mt-5">Live Streaming</h3>
+                    <button id="get-btn">Ativar/Desatirvar</button>
                     <img src="{{ url_for('video_feed') }}" width="70%">
                 </div>
             </div>
         </div>
     </body>
 </html>
+
+<script>
+const button = document.getElementById('get-btn');
+
+button.addEventListener('click', async _ => {
+  try {     
+    const response = await fetch('http://localhost:8000/ativar', {
+      method: 'get'
+    });
+    console.log('Completed!', response);
+  } catch(err) {
+    console.error(`Error: ${err}`);
+  }
+});
+</script>
